# Changelog – Betriebsmittel Ablauf

Alle relevanten Änderungen an diesem Modul werden hier dokumentiert.
Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und [SemVer](https://semver.org/lang/de/).

---

## [1.3.0] – 2026-01-24
### Added
- Kontextmenü per Rechtsklick auf den Header ergänzt, um Textbausteine direkt im Modal zu pflegen.
- Verwaltung der Textbausteine (Hinzufügen, Entfernen, Speichern) im Modulzustand gespeichert.
- Standard-Textbaustein (Mailvordruck) ergänzt und Liste der verfügbaren Platzhalter im Modal ergänzt.
- Textbaustein-Modal und Textfeld größer skaliert, um die Bearbeitung zu erleichtern.

## [1.2.0] – 2026-01-24
### Added
- Optionales Feld für Betriebsmittelnummern ergänzt und in der Suche berücksichtigt.
- Mailvordruck pro Eintrag ergänzt, um den aktuellen Gerätestandort zu kommunizieren.
- Tauschmodus hinzugefügt, um Altgeräte durch neue Einträge zu ersetzen und optional zu löschen.

## [1.1.0] – 2026-01-24
### Added
- Tastatur-Workflow für die Geräteeingabe ergänzt (Enter zum Weiter, Strg+Enter zum Speichern).

## [1.0.0] – 2026-01-24
### Added
- Neues Modul zum Verwalten von Betriebsmitteln mit Ablaufmonat, Reminder-Logik und Statusübersicht hinzugefügt.